# learn_python

./: README.md  cap_str.py
learn_python/: README.md  cap_ai.py  cap_ai_bot.py  cap_argparse.py  cap_calculator.py  cap_decorators.py  cap_dictionaries.py  cap_drink_water.py  cap_exceptions.py  cap_exceptions_throw.py  cap_fib.py  cap_file_organiser.py  cap_files.py  cap_filter.py  cap_functions.py  cap_getter_setter.py  cap_lambda.py  cap_lists.py  cap_map.py  cap_milionaire.py  cap_modules.py  cap_news_app.py  cap_oop.py  cap_os.py  cap_pdf.py  cap_qr_code.py  cap_quargs.py  cap_reduce.py  cap_regex.py  cap_sets.py  cap_static.py  cap_str.py  cap_threads.py  cap_tuples.py  cap_walrus.py  file_with_current_versions_of_libraries.txt  input_ana.txt  my_utils.py  notes.txt  output_ana.txt  (+11 more)
learn_python/flask_practice/: README.md  main_10_api.py  main_2.py  main_3.py  main_4_forms.py  main_5_jinja.py  main_6_jinja.py  main_7_jinja.py  main_8_static.py  main_9_req_param.py  pyproject.toml
learn_python/flask_practice/css/: style.css
learn_python/flask_practice/templates/: about.html  about.jinja  base.jinja  contact.html  contact.jinja  home.html  index.html  index_3.html  index_4_form.html  index_5_jinja.html  index_6_jinja.jinja  index_7.jinja  index_9.html  services.html
learn_python/template_VidSnapAI/: config.py  done.txt  ffmpeg-command.txt  generate_process.py  main.py  text_to_speech.py
learn_python/template_VidSnapAI/static/css/: gallery.css
learn_python/template_VidSnapAI/templates/: create.html  gallery.html
openApiPractice/: practice-1-continue.py
(+11 files in other folders)
